[tool.poetry]
name = "ML"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"
sklearn = "^0.0"
cmd2 = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
