[tool.poetry]
name = "forest_cover"
version = "0.2.0"
description = ""
authors = ["Aliaksei Raik <aleeelr@gmail.com>"]

[tool.poetry.scripts]
ml = "forest_cover.ml:start"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
sklearn = "^0.0"
cmd2 = "^2.4.1"
mlflow = "^1.25.1"
featuretools = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.950"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
